--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "Ruby",
       "request": "launch",
       "cwd": "${workspaceRoot}",
-      "program": "${workspaceRoot}/tests/udacidata_test.rb"
+      "program": "${workspaceRoot}/app.rb"
     },
     {
       "name": "Listen for rdebug-ide",
